--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
+body {
+  background-color: rgba(21, 19, 22, 0.26);
+}
+.cardMain {
+  padding: 2%;
+  margin: 2%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.btnMain {
+  text-align: center;
+  margin-top: 2%;
+}
+.btn {
+  margin: 0 0.5%;
+  font-size: 2rem;
+}
+.card {
+  display: block;
+  width: 100%;
+  height: 250px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.img-fluid {
+  height: auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  font-size: 2rem;
 }
